# Text-Timeline-Creator

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
src/: chat_analyzer.py  date_parser.py  docx_exporter.py  file_scanner.py  main.py  models.py  review.py  text_extractor.py  timeline_builder.py
tests/: test_chat_analyzer.py  test_date_parser.py  test_docx_exporter.py  test_file_scanner.py  test_models.py  test_review.py  test_timeline_builder.py
