[project]
name = "text-timeline-creator"
version = "0.1.0"
description = "Processes message screenshots, PDFs, and audio files into chronological timelines for law firms."
requires-python = ">=3.12"
dependencies = [
    "azure-ai-formrecognizer==3.3.0",
    "python-dotenv==1.0.0",
    "dateparser==1.2.0",
    "python-docx==1.1.0",
    "colorama==0.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
]

[project.scripts]
timeline = "src.main:main"

[tool.setuptools.packages.find]
include = ["src*"]